<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingEnd="26dp"
    android:paddingStart="26dp"
    android:paddingTop="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_profile_card_shares"
        android:textColor="@color/light_bg_dark_primary_text"
        android:textStyle="bold" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart_shares"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="-130dp"
        android:clickable="false"
        android:focusable="false" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/text_month_shares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/fragment_profile_card_shares_month"
            android:textColor="@color/light_bg_dark_secondary_text" />

        <TextView
            android:id="@+id/text_month_shares_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/fragment_profile_card_shares_month_value"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/fragment_profile_card_shares_month_avg"
            android:textColor="@color/light_bg_dark_secondary_text" />

        <TextView
            android:id="@+id/text_month_shares_avg_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/fragment_profile_card_shares_month_avg_value"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</LinearLayout>