<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/fragment_profile_card_exp"
            android:textColor="@color/light_bg_dark_primary_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_exp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/fragment_profile_card_exp_value"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_exp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:progress="@null"
        android:progressDrawable="@drawable/progressbar_drawable" />

    <TextView
        android:id="@+id/text_exp_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/fragment_profile_card_exp_left"
        android:textSize="12sp" />


</LinearLayout>