<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme.GradientTheme"
    tools:ignore="ContentDescription"
    tools:mContext=".activities.SignInActivity">

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/home2work_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/white"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:hint="@string/activity_signin_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:hint="@string/activity_signin_password"
                android:inputType="textPassword"
                android:paddingBottom="16dp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lost_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:gravity="bottom|end"
            android:padding="8dp"
            android:text="@string/activity_signin_lost_pass"
            android:textAllCaps="false"
            android:textColor="@color/light_bg_dark_hint_text" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/activity_signin_button"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>
